--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>PreEntrega1</title>
 </head>
 <body>
-    <h1>PreEntrega1</h1>
+    <header>
+        <h1>Tierra Mailott</h1>
+    </header>
 <script src="./js/main.js"></script>
 </body>
 </html>
